# serious_serializers

./: README.md  setup.cfg
.github/workflows/: tests.yml
serious_serializers/: __init__.py  serializers.py
tests/: test_serializers.py
